feat: support bcc addresses
