# src/main.rs
@@ -1,41 +1,54 @@
 #[macro_use]
 extern crate rocket;
 
-mod mailer;
 mod config;
+mod mailer;
 
+use std::ffi::OsString;
 use std::fs;
 use std::path::Path;
-use std::ffi::OsString;
 
-use rocket::Request;
 use rocket::form::Form;
-use rocket::fs::TempFile;
 use rocket::fs::FileServer;
+use rocket::fs::TempFile;
 use rocket::http::Status;
+use rocket::serde::{json::Json, Deserialize};
+use rocket::Request;
 use rocket::State;
-use rocket::serde::{Deserialize, json::Json};
 
-use lettre::{Message, AsyncTransport};
-use lettre::message::{Mailbox, header, MultiPart, SinglePart, Attachment};
+use lettre::message::{header, Attachment, Mailbox, MultiPart, SinglePart};
+use lettre::{AsyncTransport, Message};
 
 #[launch]
 fn rocket() -> _ {
     let config = config::SmtpConfig::new();
     config::generate_api_doc().unwrap();
-    println!("Running with SMTP Config: host={}, port={}, encryption={}, user={}", config.host,
-             match config.port {
-                 Some(p) => p.to_string(),
-                 None => "(default)".to_string()
-             }, config.encryption.to_string(), match &config.username {
+    println!(
+        "Running with SMTP Config: host={}, port={}, encryption={}, user={}",
+        config.host,
+        match config.port {
+            Some(p) => p.to_string(),
+            None => "(default)".to_string(),
+        },
+        config.encryption.to_string(),
+        match &config.username {
             Some(u) => u.to_string(),
-            None => "(none)".to_string()
-        });
+            None => "(none)".to_string(),
+        }
+    );
     rocket::build()
         .manage(mailer::Mailer::new(config))
         .mount("/", routes![sendmail_form, sendmail_json])
         .mount("/", FileServer::from("www"))
-        .register("/", catchers![not_found, payload_too_large, unprocessable_entity, server_error])
+        .register(
+            "/",
+            catchers![
+                not_found,
+                payload_too_large,
+                unprocessable_entity,
+                server_error
+            ],
+        )
 }
 
 #[catch(404)]
@@ -70,36 +83,57 @@ struct MailParameterForm<'r> {
     to_addresses: Vec<String>,
     #[field(name = "cc_address")]
     cc_addresses: Vec<String>,
+    #[field(name = "bcc_address")]
+    bcc_addresses: Vec<String>,
     #[field(validate = len(1..))]
     content_html: String,
     content_text: Option<String>,
 }
 
 #[post("/send", format = "multipart/form-data", data = "<request_params>")]
-async fn sendmail_form(request_params: Result<Form<MailParameterForm<'_>>, rocket::form::Errors<'_>>, mailer: &State<mailer::Mailer>) -> (Status, String) {
+async fn sendmail_form(
+    request_params: Result<Form<MailParameterForm<'_>>, rocket::form::Errors<'_>>,
+    mailer: &State<mailer::Mailer>,
+) -> (Status, String) {
     match request_params {
         Ok(params) => {
             let from_addr = match &params.from_address {
                 Some(fa) => fa,
-                None => mailer.config.username.as_ref().unwrap()
+                None => mailer.config.username.as_ref().unwrap(),
             };
 
             let from_mailbox = Mailbox::new(params.from_name.clone(), from_addr.parse().unwrap());
 
-            let mut m = Message::builder().from(from_mailbox).subject(&params.subject);
+            let mut m = Message::builder()
+                .from(from_mailbox)
+                .subject(&params.subject);
             for to_address in &params.to_addresses {
-                m = m.to(to_address.parse().unwrap());
+                if let Ok(addr) = to_address.parse() {
+                    m = m.to(addr);
+                } else {
+                    return (Status::UnprocessableEntity, "invalid to_address".into());
+                }
             }
             for cc_address in &params.cc_addresses {
-                m = m.cc(cc_address.parse().unwrap());
+                if let Ok(addr) = cc_address.parse() {
+                    m = m.cc(addr);
+                } else {
+                    return (Status::UnprocessableEntity, "invalid cc_address".into());
+                }
+            }
+            for bcc_address in &params.bcc_addresses {
+                if let Ok(addr) = bcc_address.parse() {
+                    m = m.bcc(addr);
+                } else {
+                    return (Status::UnprocessableEntity, "invalid bcc_address".into());
+                }
             }
 
-            let mut multipart = MultiPart::alternative()
-                .singlepart(
-                    SinglePart::builder()
-                        .header(header::ContentType::TEXT_HTML)
-                        .body(params.content_html.to_string()),
-                );
+            let mut multipart = MultiPart::alternative().singlepart(
+                SinglePart::builder()
+                    .header(header::ContentType::TEXT_HTML)
+                    .body(params.content_html.to_string()),
+            );
             if let Some(txt) = &params.content_text {
                 multipart = multipart.singlepart(
                     SinglePart::builder()
@@ -111,28 +145,39 @@ async fn sendmail_form(request_params: Result<Form<MailParameterForm<'_>>, rocke
             let mail_body = if params.attachments.len() > 0 {
                 let mut attachments = MultiPart::mixed().multipart(multipart);
                 for attachment in &params.attachments {
-                    attachments = attachments.singlepart(Attachment::new(match attachment.name() {
-                        Some(safe_name) => {
-                            let name_no_ext = Path::new(safe_name);
-                            let unsafe_name = attachment.raw_name().unwrap().dangerous_unsafe_unsanitized_raw().as_str();
-                            let ext_part = Path::new(unsafe_name).extension();
-                            let extension = match ext_part {
-                                Some(ext) => ext.to_os_string(),
-                                None => OsString::from("")
-                            };
-                            name_no_ext.with_extension(extension).into_os_string().into_string().unwrap()
-                        }
-                        None => "attachment".to_string()
-                    }).body(
-                        match attachment {
-                            TempFile::File { path, .. } => fs::read(path).unwrap(),
-                            TempFile::Buffered { content } => content.as_bytes().to_vec()
-                        },
-                        match &attachment.content_type() {
-                            Some(content_type) => content_type.to_string().parse().unwrap(),
-                            None => "application/octet-stream".parse().unwrap()
-                        },
-                    ));
+                    attachments = attachments.singlepart(
+                        Attachment::new(match attachment.name() {
+                            Some(safe_name) => {
+                                let name_no_ext = Path::new(safe_name);
+                                let unsafe_name = attachment
+                                    .raw_name()
+                                    .unwrap()
+                                    .dangerous_unsafe_unsanitized_raw()
+                                    .as_str();
+                                let ext_part = Path::new(unsafe_name).extension();
+                                let extension = match ext_part {
+                                    Some(ext) => ext.to_os_string(),
+                                    None => OsString::from(""),
+                                };
+                                name_no_ext
+                                    .with_extension(extension)
+                                    .into_os_string()
+                                    .into_string()
+                                    .unwrap()
+                            }
+                            None => "attachment".to_string(),
+                        })
+                        .body(
+                            match attachment {
+                                TempFile::File { path, .. } => fs::read(path).unwrap(),
+                                TempFile::Buffered { content } => content.as_bytes().to_vec(),
+                            },
+                            match &attachment.content_type() {
+                                Some(content_type) => content_type.to_string().parse().unwrap(),
+                                None => "application/octet-stream".parse().unwrap(),
+                            },
+                        ),
+                    );
                 }
                 attachments
             } else {
@@ -146,7 +191,11 @@ async fn sendmail_form(request_params: Result<Form<MailParameterForm<'_>>, rocke
             }
         }
         Err(errors) => {
-            let err_text = errors.iter().map(|err| format!("{:?}", err)).collect::<Vec<_>>().join("\n");
+            let err_text = errors
+                .iter()
+                .map(|err| format!("{:?}", err))
+                .collect::<Vec<_>>()
+                .join("\n");
             (Status::UnprocessableEntity, err_text.into())
         }
     }
@@ -160,17 +209,24 @@ struct MailParameterJson {
     from_name: Option<String>,
     to_addresses: Vec<String>,
     cc_addresses: Option<Vec<String>>,
+    bcc_addresses: Option<Vec<String>>,
     content_html: String,
     content_text: Option<String>,
 }
 
 #[post("/send", format = "json", data = "<request_params>")]
-async fn sendmail_json(request_params: Result<Json<MailParameterJson>, rocket::serde::json::Error<'_>>, mailer: &State<mailer::Mailer>) -> (Status, String) {
+async fn sendmail_json(
+    request_params: Result<Json<MailParameterJson>, rocket::serde::json::Error<'_>>,
+    mailer: &State<mailer::Mailer>,
+) -> (Status, String) {
     match request_params {
         Ok(params) => {
             // manual data validation required, https://github.com/SergioBenitez/Rocket/issues/1915
             if params.subject.chars().count() == 0 {
-                return (Status::UnprocessableEntity, "subject missing or empty".into());
+                return (
+                    Status::UnprocessableEntity,
+                    "subject missing or empty".into(),
+                );
             }
             if let Some(fa) = &params.from_address {
                 if fa.chars().count() < 3 {
@@ -178,41 +234,68 @@ async fn sendmail_json(request_params: Result<Json<MailParameterJson>, rocket::s
                 }
             }
             if params.to_addresses.len() == 0 {
-                return (Status::UnprocessableEntity, "to_addresses missing or empty".into());
+                return (
+                    Status::UnprocessableEntity,
+                    "to_addresses missing or empty".into(),
+                );
             } else {
                 for to_addr in &params.to_addresses {
                     if to_addr.chars().count() < 3 {
-                        return (Status::UnprocessableEntity, "to_addresses contains invalid address".into());
+                        return (
+                            Status::UnprocessableEntity,
+                            "to_addresses contains invalid address".into(),
+                        );
                     }
                 }
             }
             if params.content_html.chars().count() == 0 {
-                return (Status::UnprocessableEntity, "content_html missing or empty".into());
+                return (
+                    Status::UnprocessableEntity,
+                    "content_html missing or empty".into(),
+                );
             }
 
             let from_addr = match &params.from_address {
                 Some(fa) => fa,
-                None => mailer.config.username.as_ref().unwrap()
+                None => mailer.config.username.as_ref().unwrap(),
             };
 
             let from_mailbox = Mailbox::new(params.from_name.clone(), from_addr.parse().unwrap());
 
-            let mut m = Message::builder().from(from_mailbox).subject(&params.subject);
+            let mut m = Message::builder()
+                .from(from_mailbox)
+                .subject(&params.subject);
             for to_address in &params.to_addresses {
-                m = m.to(to_address.parse().unwrap());
+                if let Ok(addr) = to_address.parse() {
+                    m = m.to(addr);
+                } else {
+                    return (Status::UnprocessableEntity, "invalid to_address".into());
+                }
             }
             if let Some(cc_addrs) = &params.cc_addresses {
                 for cc_address in cc_addrs {
-                    m = m.cc(cc_address.parse().unwrap());
+                    if let Ok(addr) = cc_address.parse() {
+                        m = m.cc(addr);
+                    } else {
+                        return (Status::UnprocessableEntity, "invalid cc_address".into());
+                    }
+                }
+            }
+            if let Some(bcc_addrs) = &params.bcc_addresses {
+                for bcc_address in bcc_addrs {
+                    if let Ok(addr) = bcc_address.parse() {
+                        m = m.bcc(addr);
+                    } else {
+                        return (Status::UnprocessableEntity, "invalid bcc_address".into());
+                    }
                 }
             }
 
-            let mut multipart = MultiPart::alternative()
-                .singlepart(
-                    SinglePart::builder()
-                        .header(header::ContentType::TEXT_HTML)
-                        .body(params.content_html.to_string()),
-                );
+            let mut multipart = MultiPart::alternative().singlepart(
+                SinglePart::builder()
+                    .header(header::ContentType::TEXT_HTML)
+                    .body(params.content_html.to_string()),
+            );
             if let Some(txt) = &params.content_text {
                 multipart = multipart.singlepart(
                     SinglePart::builder()
@@ -228,8 +311,6 @@ async fn sendmail_json(request_params: Result<Json<MailParameterJson>, rocket::s
                 Err(e) => (Status::InternalServerError, e.to_string()),
             }
         }
-        Err(e) => {
-            (Status::UnprocessableEntity, format!("{}", e).into())
-        }
+        Err(e) => (Status::UnprocessableEntity, format!("{}", e).into()),
     }
 }
